Bug #16693: use jackson 3 for nested JsonNode payloads in archive-units updates